[package]
name = "transtube"
version = "0.1.0"
authors = ["GirkovArpa <girkovarpa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "0.5.58"
winapi = { version = "0.3.7", features = ["winuser", "objbase", "mmdeviceapi", "endpointvolume"] }
lazy_static = "*"
soundio = "0.2.1"
crossbeam = "0.2.10"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "transtube.exe"
LegalCopyright = "Copyright © Girkov Arpa 2022"
FileDescription = "TransTube: Simple vtuber app."
ProductName = "TransTube"
ProductVersion = "0.1.0"